# pyliteadmin

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: chinook.db  db.py  pyliteadmin.css  pyliteadmin.py
src/pyliteadmin/: app.py  db.py  pyliteadmin.css
