[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pyliteadmin"
version = "0.0.18"
authors = [
  { name="Brandon Demelo", email="brandon@brandondemelo.com" },
]
description = "A TUI for viewing and CRUDing sqlite databases."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "textual",
]

[project.urls]
"Homepage" = "https://github.com/The-Bush/pyliteadmin"
"Bug Tracker" = "https://github.com/The-Bush/pyliteadmin/issues"

[project.scripts]
pyliteadmin = "pyliteadmin.app:main"